--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.274.0",
     "negotiator": "^0.6.3",
-    "next": "^13.5.5",
+    "next": "^14.1.0",
     "next-compose-plugins": "^2.2.1",
-    "next-intl": "3.0.0-beta.19",
+    "next-intl": "^3.9.1",
     "next-sitemap": "^4.2.3",
     "p-throttle": "^5.1.0",
     "react": "^18.2.0",
